--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,14 @@ services:
       - mysql-data:/var/lib/mysql
     networks:
       - app-network
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
 
   nestjs:
     build:
-      context: ./nest
+      context: .
       dockerfile: Dockerfile
     ports:
       - "${SERVER_PORT}:${SERVER_PORT}"
@@ -26,7 +30,8 @@ services:
       - DB_NAME=${DB_NAME}
       - DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
     depends_on:
-      - mysql
+        mysql:
+          condition: service_healthy
     networks:
       - app-network
     develop:
@@ -34,24 +39,6 @@ services:
         - path: .
           target: /app
           action: sync+restart
-
-  php:
-    build:
-      context: ./php
-      dockerfile: Dockerfile
-    ports:
-      - "${PHP_PORT}:${PHP_PORT}"
-    depends_on:
-      - nestjs
-    environment:
-      - PHP_PORT=${PHP_PORT}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_NAME=${DB_NAME}
-    networks:
-      - app-network
 
 networks:
   app-network:
